--- a/assets/index.html
+++ b/assets/index.html
@@ -23,7 +23,7 @@
 
 
 <body>
-<nav class="navbar navbar-default col-lg-12" role="navigation" ng-controller="NavCtrl">
+<nav class="navbar navbar-default " role="navigation" ng-controller="NavCtrl">
  	<div class="row" ng-show="!user.isLeader || !user.isSuper">
     <div class="col-lg-3 col-centered">
     	<span class="navbar-brand center">
